--- a/Mobile-Agent-v2/requirements.txt
+++ b/Mobile-Agent-v2/requirements.txt
@@ -2,8 +2,8 @@ torch
 torchvision
 transformers
 modelscope==1.15.0
-TensorFlow==2.19.0
-keras==3.5.0
+TensorFlow==2.13.0
+keras==2.13.1
 git+https://github.com/openai/CLIP.git
 opencv-python
 matplotlib
@@ -11,9 +11,9 @@ pycocotools
 timm
 SentencePiece
 tf_slim
-tf_keras==2.19.0
+tf_keras
 pyclipper
 shapely
 supervision==0.21.0
 dashscope
-numpy==1.26.4
+numpy
